--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ERUY Importaciones</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +20,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
     <div class="padre">
       <header class="header">
         <div class="menu">
@@ -74,15 +85,24 @@
         <section class="boxes-inf">
           <div class="box-inf">
             <img src="img/logoavion.png" alt="box-img2" />
-            <h3>Importacion de productos de alta calidad, todos nuestros prodcutos cuentan con garantia</h3>
+            <h3>
+              Importacion de productos de alta calidad, todos nuestros prodcutos
+              cuentan con garantia
+            </h3>
           </div>
           <div class="box-inf">
             <img src="img/logotienda.png" alt="box-img2" />
-            <h3>Venta de productos al por mayor y por menor. Tienda digital y fisica</h3>
+            <h3>
+              Venta de productos al por mayor y por menor. Tienda digital y
+              fisica
+            </h3>
           </div>
           <div class="box-inf">
             <img src="img/logomoto.png" alt="box-img2" />
-            <h3>Envios a todo el pais, despachamos los pedidos durante el mismo dia</h3>
+            <h3>
+              Envios a todo el pais, despachamos los pedidos durante el mismo
+              dia
+            </h3>
           </div>
         </section>
       </div>
