--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <script
@@ -25,21 +29,46 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <div class="padre">
+    <div class="padre container-fluid">
       <header class="header">
         <div class="menu">
           <h1 class="titulo">ERUY</h1>
           <h2 class="subtitulo">Importaciones</h2>
-          <nav class="menuhorizontal">
-            <ul>
-              <li class="nav"><a href="index.html">Inicio</a></li>
-              <li class="nav"><a href="pages/productos.html">Productos</a></li>
-              <li class="nav"><a href="pages/ofertas.html">Ofertas</a></li>
-              <li class="nav">
-                <a href="pages/sobre-nosotros.html">Sobre Nosotros</a>
-              </li>
-              <li class="nav"><a href="pages/contacto.html">Contacto</a></li>
-            </ul>
+          <nav class="navbar navbar-expand-lg menuhorizontal">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Inicio</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Ofertas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sobre Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </nav>
         </div>
       </header>
