Entrega 2 - responsive Inicio + Productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,92 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ERUY Importaciones - Productos</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
     <div class="padre">
-        <header class="header">
-            <div class="menu">
-                <h1 class="titulo">ERUY</h1>
-                <h2 class="subtitulo">Importaciones</h2>
-                <nav class="menuhorizontal">
-                    <ul>
-                        <li class="nav"><a href="../index.html">Inicio</a></li>
-                        <li class="nav"><a href="productos.html">Productos</a></li>
-                        <li class="nav"><a href="ofertas.html">Ofertas</a></li>
-                        <li class="nav"><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
-                        <li class="nav"><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>           
+      <header class="header">
+        <div class="menu">
+          <h1 class="titulo">ERUY</h1>
+          <h2 class="subtitulo">Importaciones</h2>
+          <nav class="navbar menuhorizontal">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Inicio</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Ofertas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sobre Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </header>
-        <div class="textoprincipal">
-            <h1>Productos</h1>
+          </nav>
         </div>
-        <div class="productos">
-            <div class="cat">
-                <h2>
-                    Categorias
-                </h2>
-                <ul>
-                <li><a href=".">iPhone</a></li>
-                <li><a href=".">Cases</a></li>
-                <li><a href=".">Accesorios</a></li>
-                <li><a href=".">Cargadores</a></li>
-                <li><a href=".">Tv Box</a></li>
-                <li><a href=".">Relojes</a></li>
-                <li><a href=".">Tablet</a></li>
-                
-            </ul>
-            </div>
-            <div class="prod">
-                <div class="boxes">
-                    <div class="box">
-                        <img src="../img/box1.png" alt="box-img1" class="box-img">
-                    </div>
-                    <div class="box">
-                        <img src="../img/box2.png" alt="box-img1" class="box-img">
-                    </div>
-                    <div class="box">
-                        <img src="../img/box3.png" alt="box-img1" class="box-img">
-                    </div>
-                </div>
-                <div class="boxes">
-                    <div class="box">
-                        <img src="../img/box4.png" alt="box-img1" class="box-img">
-                    </div>
-                    <div class="box">
-                        <img src="../img/box5.png" alt="box-img1" class="box-img">
-                    </div>
-                    <div class="box">
-                        <img src="../img/sale1.png" alt="box-img1" class="box-img">
-                    </div>
-                </div>
-                <div class="boxes">
-                    <div class="box">
-                        <img src="../img/sale2.png" alt="box-img1" class="box-img">
-                    </div>
-                    <div class="box">
-                        <img src="../img/sale3.png" alt="box-img1" class="box-img">
-                    </div>
-                    <div class="box">
-                        <img src="../img/sale4.png" alt="box-img1" class="box-img">
-                    </div>
-                </div>
-            </div>
+      </header>
+      <div class="textoprincipal">
+        <h1>Productos</h1>
+      </div>
+      <div class="productos">
+        <div class="cat">
+          <h2>Categorias</h2>
+          <ul>
+            <li><a href=".">iPhone</a></li>
+            <li><a href=".">Cases</a></li>
+            <li><a href=".">Accesorios</a></li>
+            <li><a href=".">Cargadores</a></li>
+            <li><a href=".">Tv Box</a></li>
+            <li><a href=".">Relojes</a></li>
+            <li><a href=".">Tablet</a></li>
+          </ul>
         </div>
-        <footer class="footer margen-interno">
-            <nav class="pie">
-                <p>Copyright 2022 ERUY Importaciones &copy; todos los derechos reservados.</p>
-                <a href="$">Desarrollado por Esteban Recayte</a>
-            </nav>
-        </footer>
+        <div class="prod">
+          <div class="boxes">
+            <div class="box">
+              <img src="../img/box1.png" alt="box-img1" class="box-img" />
+            </div>
+            <div class="box">
+              <img src="../img/box2.png" alt="box-img1" class="box-img" />
+            </div>
+            <div class="box">
+              <img src="../img/box3.png" alt="box-img1" class="box-img" />
+            </div>
+          </div>
+          <div class="boxes">
+            <div class="box">
+              <img src="../img/box4.png" alt="box-img1" class="box-img" />
+            </div>
+            <div class="box">
+              <img src="../img/box5.png" alt="box-img1" class="box-img" />
+            </div>
+            <div class="box">
+              <img src="../img/sale1.png" alt="box-img1" class="box-img" />
+            </div>
+          </div>
+          <div class="boxes">
+            <div class="box">
+              <img src="../img/sale2.png" alt="box-img1" class="box-img" />
+            </div>
+            <div class="box">
+              <img src="../img/sale3.png" alt="box-img1" class="box-img" />
+            </div>
+            <div class="box">
+              <img src="../img/sale4.png" alt="box-img1" class="box-img" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="footer margen-interno">
+        <nav class="pie">
+          <p>
+            Copyright 2022 ERUY Importaciones &copy; todos los derechos
+            reservados.
+          </p>
+          <a href="$">Desarrollado por Esteban Recayte</a>
+        </nav>
+      </footer>
     </div>
+  </body>
 </html>
