--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <div class="padre container-fluid">
+    <div class="padre">
       <header class="header">
         <div class="menu">
           <h1 class="titulo">ERUY</h1>
