--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
     <div class="padre">
       <header class="header">
         <div class="menu">
-          <h1 class="titulo">ERUY</h1>
-          <h2 class="subtitulo">Importaciones</h2>
-          <nav class="navbar navbar-expand-lg menuhorizontal">
+          <h1 class="titulo"><a href="/index.html">ERUY</a></h1>
+          <h2 class="subtitulo"><a href="/index.html">Importaciones</a></h2>
+          <nav
+            class="navbar navbar-expand-lg menuhorizontal"
+            style="background-color: #e3f2fd"
+          >
             <div class="container-fluid">
               <button
                 class="navbar-toggler"
@@ -50,21 +53,28 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
+                    <a
+                      class="nav-link active"
+                      aria-current="page"
+                      href="/index.html"
                       >Inicio</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="/pages/productos.html"
+                      >Productos</a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Ofertas</a>
+                    <a class="nav-link" href="/pages/ofertas.html">Ofertas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre Nosotros</a>
+                    <a class="nav-link" href="/pages/sobre-nosotros.html"
+                      >Sobre Nosotros</a
+                    >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
