Seteo de enlace logo a index.html

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -32,8 +32,8 @@
     <div class="padre">
       <header class="header">
         <div class="menu">
-          <h1 class="titulo">ERUY</h1>
-          <h2 class="subtitulo">Importaciones</h2>
+          <h1 class="titulo"><a href="/index.html">ERUY</a></h1>
+          <h2 class="subtitulo"><a href="/index.html">Importaciones</a></h2>
           <nav
             class="navbar navbar-expand-lg menuhorizontal"
             style="background-color: #e3f2fd"
