--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ERUY Importaciones</title>
+    <title>
+      ERUY Importaciones - Accesorios de todo tipo - Montevideo Uruguay
+    </title>
+    <meta
+      name="descripcion"
+      content="Somos una empresa familiar dedicada a la venta de productos importados de primera calidad ubicada en Montevideo Uruguay. Cases para iPhone accesorios tecnologicos y mas."
+    />
+    <meta
+      name="keywords"
+      content="iphone,cases,accesorios,tecnologia,uruguay,celulares,tables,telefonos,venta,productos,airpods"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
