vinculando hipervinculos finales

--- a/index.html
+++ b/index.html
@@ -97,34 +97,53 @@
         <h1>Los mejores productos importados</h1>
         <div class="boxes">
           <div class="box">
-            <img src="img/box1.png" alt="box-img1" class="box-img" />
+            <img
+              src="img/box1.png"
+              alt="Carcaza iPhone Magsafe"
+              class="box-img"
+            />
             <h2>iPhone Magsafe</h2>
             <h3>Varios Colores</h3>
-            <a href=".">Comprar</a>
+            <a
+              href="https://articulo.mercadolibre.com.uy/MLU-605750362-cases-iphone-magnetica-magsafe-iphone-121113-_JM"
+              >Comprar</a
+            >
           </div>
           <div class="box">
-            <img src="img/box2.png" alt="box-img1" class="box-img" />
+            <img src="img/box2.png" alt="Carcaza iPhone" class="box-img" />
             <h2>iPhone Cases</h2>
             <h3>Todos los Modelos</h3>
-            <a href=".">Comprar</a>
+            <a
+              href="https://articulo.mercadolibre.com.uy/MLU-620643196-case-funda-silicona-iphone-14-todos-los-modelos-colores-_JM"
+              >Comprar</a
+            >
           </div>
           <div class="box">
-            <img src="img/box3.png" alt="box-img1" class="box-img" />
+            <img src="img/box3.png" alt="Ipad generacion 10" class="box-img" />
             <h2>iPad</h2>
             <h3>10 Gen</h3>
-            <a href=".">Comprar</a>
+            <a
+              href="https://articulo.mercadolibre.com.uy/MLU-617069896-apple-airpods-con-estuche-de-carga-inalambrica-blanco-_JM"
+              >Comprar</a
+            >
           </div>
           <div class="box">
-            <img src="img/box4.png" alt="box-img1" class="box-img" />
+            <img src="img/box4.png" alt="TV BOX Apple" class="box-img" />
             <h2>Tv Box</h2>
             <h3>Apple</h3>
-            <a href=".">Comprar</a>
+            <a
+              href="https://articulo.mercadolibre.com.uy/MLU-615214407-cases-iphone-funda-magsafe-varios-colores-premium-_JM"
+              >Comprar</a
+            >
           </div>
           <div class="box">
-            <img src="img/box5.png" alt="box-img1" class="box-img" />
+            <img src="img/box5.png" alt="Smart Watch Apple" class="box-img" />
             <h2>Smart Watch</h2>
             <h3>Ultima generacion</h3>
-            <a href=".">Comprar</a>
+            <a
+              href="https://articulo.mercadolibre.com.uy/MLU-611328110-ficha-apple-carga-rapida-original-sellada-_JM"
+              >Comprar</a
+            >
           </div>
         </div>
       </div>
@@ -134,21 +153,21 @@
         </div>
         <section class="boxes-inf">
           <div class="box-inf">
-            <img src="img/logoavion.png" alt="box-img2" />
+            <img src="img/logoavion.png" alt="Avion" />
             <h3>
               Importacion de productos de alta calidad, todos nuestros prodcutos
               cuentan con garantia
             </h3>
           </div>
           <div class="box-inf">
-            <img src="img/logotienda.png" alt="box-img2" />
+            <img src="img/logotienda.png" alt="Tienda" />
             <h3>
               Venta de productos al por mayor y por menor. Tienda digital y
               fisica
             </h3>
           </div>
           <div class="box-inf">
-            <img src="img/logomoto.png" alt="box-img2" />
+            <img src="img/logomoto.png" alt="Envios" />
             <h3>
               Envios a todo el pais, despachamos los pedidos durante el mismo
               dia
@@ -162,7 +181,9 @@
             Copyright 2022 ERUY Importaciones &copy; todos los derechos
             reservados.
           </p>
-          <a href="$">Desarrollado por Esteban Recayte</a>
+          <a href="https://www.linkedin.com/in/estebanrecayte/"
+            >Desarrollado por Esteban Recayte</a
+          >
         </nav>
       </footer>
     </div>
