--- a/pages/productos.html
+++ b/pages/productos.html
@@ -89,47 +89,102 @@
         <div class="cat">
           <h2>Categorias</h2>
           <ul>
-            <li><a href=".">iPhone</a></li>
-            <li><a href=".">Cases</a></li>
-            <li><a href=".">Accesorios</a></li>
-            <li><a href=".">Cargadores</a></li>
-            <li><a href=".">Tv Box</a></li>
-            <li><a href=".">Relojes</a></li>
-            <li><a href=".">Tablet</a></li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >iPhone</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >Cases</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >Accesorios</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >Cargadores</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >Tv Box</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >Relojes</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://listado.mercadolibre.com.uy/_CustId_617313112?item_id=MLU611328110&category_id=MLU165337&seller_id=617313112&client=recoview-selleritems&recos_listing=true"
+                >Tablet</a
+              >
+            </li>
           </ul>
         </div>
         <div class="prod">
           <div class="boxes">
             <div class="box">
-              <img src="../img/box1.png" alt="box-img1" class="box-img" />
+              <img
+                src="../img/box1.png"
+                alt="Carcaza iPhone Magsafe"
+                class="box-img"
+              />
             </div>
             <div class="box">
-              <img src="../img/box2.png" alt="box-img1" class="box-img" />
+              <img
+                src="../img/box2.png"
+                alt="Cases silicona iPhone"
+                class="box-img"
+              />
             </div>
             <div class="box">
-              <img src="../img/box3.png" alt="box-img1" class="box-img" />
-            </div>
-          </div>
-          <div class="boxes">
-            <div class="box">
-              <img src="../img/box4.png" alt="box-img1" class="box-img" />
-            </div>
-            <div class="box">
-              <img src="../img/box5.png" alt="box-img1" class="box-img" />
-            </div>
-            <div class="box">
-              <img src="../img/sale1.png" alt="box-img1" class="box-img" />
+              <img src="../img/box3.png" alt="iPad" class="box-img" />
             </div>
           </div>
           <div class="boxes">
             <div class="box">
-              <img src="../img/sale2.png" alt="box-img1" class="box-img" />
+              <img src="../img/box4.png" alt="Tv Box" class="box-img" />
             </div>
             <div class="box">
-              <img src="../img/sale3.png" alt="box-img1" class="box-img" />
+              <img src="../img/box5.png" alt="Apple Watch" class="box-img" />
             </div>
             <div class="box">
-              <img src="../img/sale4.png" alt="box-img1" class="box-img" />
+              <img src="../img/sale1.png" alt="airpods" class="box-img" />
+            </div>
+          </div>
+          <div class="boxes">
+            <div class="box">
+              <img
+                src="../img/sale2.png"
+                alt="Ficha de carga"
+                class="box-img"
+              />
+            </div>
+            <div class="box">
+              <img
+                src="../img/sale3.png"
+                alt="Wallet Magsafe"
+                class="box-img"
+              />
+            </div>
+            <div class="box">
+              <img
+                src="../img/sale4.png"
+                alt="Estacion de carga 3 en 1"
+                class="box-img"
+              />
             </div>
           </div>
         </div>
@@ -140,7 +195,9 @@
             Copyright 2022 ERUY Importaciones &copy; todos los derechos
             reservados.
           </p>
-          <a href="$">Desarrollado por Esteban Recayte</a>
+          <a href="https://www.linkedin.com/in/estebanrecayte/"
+            >Desarrollado por Esteban Recayte</a
+          >
         </nav>
       </footer>
     </div>
