--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/productos.html"
+                    <a class="nav-link" href="/pages/productos.html"
                       >Productos</a
                     >
                   </li>
